# natural-language-processing-with-python-and-spacy

./: pyproject.toml
src/nlp/01-installing-statistical-models-for-spaCy/: 01-tokenization.py  02-lemmatization.py  03-applying-lemmatization-for-meaning-recognition.py  04-part-of-speech-tagging.py
